Prevent page from jumping when loading images

--- a/frontend/src/components/image.module.css
+++ b/frontend/src/components/image.module.css
@@ -12,9 +12,7 @@
 }
 
 .img {
-  width: 100%;
   max-width: var(--max-content-width);
-  height: 100%;
   object-fit: contain;
   margin: 0;
 }
